Updated the postgres port

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      # - "${POSTGRES_PORT:-5432}:5432"
+      - "5432:5432"  # Correct format without interpolation
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
